--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* hide scrollbar */
+.scrollbar-hide::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide Scrollbar for IE, Edge and Firefox browser */
+
+.scrollbar-hide {
+    -ms-overflow-style: none;
+    /*IE and Edge*/
+    scrollbar-width: none;
+    /*Firefox*/
+}
